<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<!-- TITLE -->
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/title" />
		<EditText android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1" />
	</LinearLayout>
	
	<!-- BODY -->
	<TextView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/body" />
	<EditText android:id="@+id/body" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:scrollbars="vertical" />

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<!-- VIDEO -->
		<LinearLayout android:orientation="vertical" android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/video" />
			<TextView android:id="@+id/video"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:scrollbars="vertical" />
		</LinearLayout>
		<!-- PHOTO -->
		<LinearLayout android:orientation="vertical" android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/photo" />
			<TextView android:id="@+id/photo"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:scrollbars="vertical" />
		</LinearLayout>
		<!-- KNIT -->
		<LinearLayout android:orientation="vertical" android:layout_weight="1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/knit" />
			<TextView android:id="@+id/knit"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:scrollbars="vertical" />
		</LinearLayout>
	</LinearLayout>

<!-- (a/v record buttons) -->
	<LinearLayout android:orientation="horizontal" android:background="@color/color1"
		android:layout_weight="1" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/startButton" android:text="record"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<Button android:id="@+id/stopButton" android:text="stop"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<Button android:id="@+id/playButton" android:text="play"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<!-- (save button) -->
	<LinearLayout android:orientation="horizontal"
		android:layout_weight="1" android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button android:id="@+id/confirm" android:text="@string/confirm"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<Button android:id="@+id/locateMe" android:text="locateMe"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
	</LinearLayout>

</LinearLayout>